Extract framework code